Добавлен случайный выбор угловой ячейки

--- a/dw/public/documentation/index.html
+++ b/dw/public/documentation/index.html
@@ -12,13 +12,13 @@
 
 <ul>
     <li>
+        Перепроверить видимость методов - наверняка где-то public можно сменить на private/protected
+    </li>
+    <li>
         В MySQL таблицу game добавить поле ip - IP пользователя, который создал игру
     </li>
     <li>
         В MySQL таблице game убрать автообновление даты в колонке data
-    </li>
-    <li>
-        Сделать случайный выбор хода в угловые ячейки
     </li>
     <li>
         Сделать страницу "Журнал игр" - с историей последних 30-ти игр
@@ -34,6 +34,9 @@
 <h2>Сделано</h2>
 
 <ul>
+    <li>
+        Сделать случайный выбор хода в угловые ячейки
+    </li>
     <li>
         Доработать комментарии - указать описания к принимаемым и возвращаемым аргументам (ошибка где-то в конструкторе
         класса Game либо его методе getHash)
